Ajout des test unitaires,integrations et configurations des pipelines